@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7741 2004/11/06 20:19:54 he Exp $
+$NetBSD: CHANGES,v 1.7742 2004/11/06 21:16:15 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -5132,3 +5132,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added p5-Lingua-EN-Inflect 1.88 [he 2004-11-06]
 	Added p5-UNIVERSAL-moniker 0.08 [he 2004-11-06]
 	Added p5-Class-DBI 0.96 [he 2004-11-06]
+	Updated websvn to 1.61 [jdolecek 2004-11-06]
